Fixed link input parent overflow

--- a/src/components/CreationPage/CreationPage.module.sass
+++ b/src/components/CreationPage/CreationPage.module.sass
@@ -3,6 +3,7 @@
 
 .formContainer
   margin-top: 35px
+  width: 100%
 
 .selectionBlock
   flex: 1
@@ -10,6 +11,7 @@
   border-radius: 15px
   background-color: var(--taskContainerColor)
   display: inline-block
+  cursor: pointer
 
 .selectionCaption
   font-family: 'San Francisco Pro'
@@ -49,6 +51,7 @@
   height: 10px
   position: relative
   border: none
+  cursor: pointer
   &::before
     content: ''
     position: absolute
@@ -84,7 +87,7 @@
   flex-direction: column
 
 .input
-  width: 100%
+  width: 20%
   border: none
   outline: none
   border-radius: 15px
@@ -93,12 +96,18 @@
   font-family: 'San Francisco Pro'
   font-weight: 500
   background-color: var(--createBtnAndInputBgColor)
-  color: var(--createBtnTextColor)
+  color: var(--textColor)
 
-.extraBlock
+.linkInput
+  width: 100%
+  box-sizing: border-box
 
 .numInput
-  width: 20%
+  width: 100%
+  border: none
+  outline: none
+  color: var(--createBtnTextColor)
+  background-color: var(--createBtnAndInputBgColor)
 
 .checkboxWrapper
   display: flex
@@ -112,29 +121,4 @@
   cursor: pointer
 
 .pinToTopCheckBox
-  width: 10px
-  height: 10px
-  position: relative
-  border: none
-  outline: none
-  &::before
-    content: ''
-    position: absolute
-    display: block
-    width: 1em
-    height: 1em
-    flex-shrink: 0
-    flex-grow: 0
-    border: 2px solid #8E8E96
-    border-radius: 100%
-    margin-right: 0.5em
-    background-repeat: no-repeat
-    background-position: center center
-    background-size: 70% 70%
-    background-color: var(--taskContainerColor)
-    transform: translateY(-5px) translateX(-5px)
-  &:checked
-    &::before
-      background-color: #50D86A
-      border-color: #50D86A
-      background-image: url('../../common/img/check-solid.svg')
+  transform: translateX(3px)
